--- a/index.html
+++ b/index.html
@@ -152,6 +152,81 @@ tr:nth-child(even) {
     <td>Train</td>
     <td>Поезд</td>
   </tr>
+   <tr>
+    <td>Ef</td>
+    <td>And</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Sharton</td>
+    <td>Word</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Rimis</td>
+    <td>Store</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Pagno</td>
+    <td>Road</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Janiks</td>
+    <td>Hero</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Stegne</td>
+    <td>Food</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Vitro</td>
+    <td>Drink</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Helsko</td>
+    <td>Bread</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Vleko</td>
+    <td>Water</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Pizat</td>
+    <td>Caucas</td>
+    <td>Кавказ</td>
+  </tr>
+  <tr>
+    <td>Huan</td>
+    <td>Communism</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Kurwa</td>
+    <td>Shit!</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Kurat</td>
+    <td>Fuck!</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Roma</td>
+    <td>Fuck off</td>
+    <td>Нахуй</td>
+  </tr>
+  <tr>
+    <td>Vania</td>
+    <td>Dick</td>
+    <td>+</td>
+  </tr>
   </table>
   <br><h2>Mevis/Pronouns/Местоимения</h2>
   <table>
