--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ tr:nth-child(even) {
 }
 </style>
 </head>
-<h2>Hon/Nouns/Сушествительные</h2><br>
 <body>
+<h2>Hon/Nouns/Сушествительные</h2><br>
   <table>
   <tr>
     <th>EST</th>
@@ -41,11 +41,6 @@ tr:nth-child(even) {
     <td>Aga</td>
     <td>But</td>
     <td>Но</td>
-  </tr>
-  <tr>
-    <td>Ak</td>
-    <td>Is</td>
-    <td>Является</td>
   </tr>
   <tr>
     <td>Masko</td>
@@ -158,7 +153,7 @@ tr:nth-child(even) {
     <td>+</td>
   </tr>
   <tr>
-    <td>Sharton</td>
+    <td>Sarton</td>
     <td>Word</td>
     <td>+</td>
   </tr>
@@ -170,6 +165,11 @@ tr:nth-child(even) {
   <tr>
     <td>Pagno</td>
     <td>Road</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Musisk</td>
+    <td>Music</td>
     <td>+</td>
   </tr>
   <tr>
@@ -198,6 +198,31 @@ tr:nth-child(even) {
     <td>+</td>
   </tr>
   <tr>
+    <td>Med</td>
+    <td>With</td>
+    <td>+</td>
+  </tr>
+   <tr>
+    <td>Livo</td>
+    <td>Life</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Negi</td>
+    <td>True</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Nenegi</td>
+    <td>False</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Liolio</td>
+    <td>Lie</td>
+    <td>+</td>
+  </tr>
+  <tr>
     <td>Pizat</td>
     <td>Caucas</td>
     <td>Кавказ</td>
@@ -207,6 +232,21 @@ tr:nth-child(even) {
     <td>Communism</td>
     <td>+</td>
   </tr>
+  <tr>
+    <td>Somas</td>
+    <td>Today</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Jemas</td>
+    <td>Yesterday</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Tomas</td>
+    <td>Tommorow</td>
+    <td>+</td>
+    </tr>
   <tr>
     <td>Kurwa</td>
     <td>Shit!</td>
@@ -228,6 +268,97 @@ tr:nth-child(even) {
     <td>+</td>
   </tr>
   </table>
+  <h2>Spehos/Verbs/Глаголы</h2><br>
+  <table>
+  <tr>
+    <th>EST</th>
+    <th>ENG</th>
+    <th>RUS</th>
+  </tr>
+  <tr>
+    <td>Bedri</td>
+    <td>To Be</td>
+    <td>Будет</td>
+  </tr>
+  <tr>
+    <td>Tedri</td>
+    <td>Was</td>
+    <td>Было</td>
+  </tr>
+  
+  <tr>
+    <td>Bergi</td>
+    <td>Want</td>
+    <td>Хотеть</td>
+  </tr>
+  <tr>
+    <td>Ak</td>
+    <td>Is</td>
+    <td>Является</td>
+  </tr>
+  <tr>
+    <td>Holeft</td>
+    <td>Shut up</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Presso</td>
+    <td>Like</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Steg</td>
+    <td>Eat</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Vit</td>
+    <td>Drink</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Valsk</td>
+    <td>Walk</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Darvi</td>
+    <td>Think</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Aht</td>
+    <td>Write/Draw</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Stalesi</td>
+    <td>Steal</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Spluto</td>
+    <td>Do/Make</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Spesit</td>
+    <td>Read</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Musit</td>
+    <td>Listen</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Dzeri</td>
+    <td>Play</td>
+    <td>+</td>
+  </tr>
+ 
+  </table>
+
   <br><h2>Mevis/Pronouns/Местоимения</h2>
   <table>
       <tr>
