--- a/index.html
+++ b/index.html
@@ -108,9 +108,24 @@ tr:nth-child(even) {
     <td>Про</td>
   </tr>
   <tr>
+    <td>Ado</td>
+    <td>School</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Zadrotu</td>
+    <td>Stairs/Steps</td>
+    <td>+</td>
+  </tr>
+  <tr>
     <td>Igis</td>
     <td>Plant</td>
     <td>Растение</td>
+  </tr>
+  <tr>
+    <td>Riger</td>
+    <td>"Black"</td>
+    <td>+</td>
   </tr>
   <tr>
     <td>Elvo</td>
@@ -263,12 +278,18 @@ tr:nth-child(even) {
     <td>Нахуй</td>
   </tr>
   <tr>
+    <td>Krek</td>
+    <td>High</td>
+    <td>+</td>
+  </tr>
+  <tr>
     <td>Vania</td>
     <td>Dick</td>
     <td>+</td>
   </tr>
   </table>
-  <h2>Spehos/Verbs/Глаголы</h2><br>
+  
+  <br><h2>Spehos/Verbs/Глаголы</h2><br>
   <table>
   <tr>
     <th>EST</th>
@@ -292,6 +313,11 @@ tr:nth-child(even) {
     <td>Хотеть</td>
   </tr>
   <tr>
+    <td>Agne</td>
+    <td>Have</td>
+    <td>Иметь</td>
+  </tr>
+  <tr>
     <td>Ak</td>
     <td>Is</td>
     <td>Является</td>
@@ -304,6 +330,11 @@ tr:nth-child(even) {
   <tr>
     <td>Presso</td>
     <td>Like</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Iobaudi?</td>
+    <td>What's your name?</td>
     <td>+</td>
   </tr>
   <tr>
@@ -358,7 +389,99 @@ tr:nth-child(even) {
   </tr>
  
   </table>
-
+  <br><h2>Hav/Adjectives/Прилагательные</h2><br>
+  <table>
+  <tr>
+    <th>EST</th>
+    <th>ENG</th>
+    <th>RUS</th>
+  </tr>
+  <tr>
+    <td>Grot</td>
+    <td>Big</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Klen</td>
+    <td>Small</td>
+    <td>+</td>
+  </tr>
+  
+  <tr>
+    <td>Itiu</td>
+    <td>Tall</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Leb</td>
+    <td>Short</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Zhawa</td>
+    <td>Funny</td>
+    <td>+</td>
+  </tr>
+ 
+  </table>
+  <br><h2>Hadati/Questions/Вопросы</h2>
+  <table>
+      <tr>
+    <th>EST</th>
+    <th>ENG</th>
+    <th>RUS</th>
+  </tr>
+  
+  <tr>
+    <td>Poch</td>
+    <td>Why</td>
+    <td>+</td>
+  </tr>
+  
+  <tr>
+    <td>Pot</td>
+    <td>Because</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>When</td>
+    <td>Kou</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Where</td>
+    <td>Vid</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Pom</td>
+    <td>That</td>
+    <td>+</td>
+  </tr>
+  
+  <tr>
+    <td>Pom</td>
+    <td>This</td>
+    <td>+</td>
+  </tr>
+  
+  
+  <tr>
+    <td>Mop</td>
+    <td>That</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Tum</td>
+    <td>Here</td>
+    <td>+</td>
+  </tr>
+  <tr>
+    <td>Mut</td>
+    <td>There</td>
+    <td>+</td>
+  </tr>
+</table> 
   <br><h2>Mevis/Pronouns/Местоимения</h2>
   <table>
       <tr>
