--- a/index.html
+++ b/index.html
@@ -52,10 +52,27 @@ tr:nth-child(even) {
     <td>Too</td>
     <td>Тоже</td>
   </tr>
+      
+  <tr>
+    <td>Men</td>
+    <td>Guy</td>
+    <td>Чел</td>
+  </tr>
+      
+  <tr>
+    <td>Den</td>
+    <td>Woman</td>
+    <td>+</td>
+  </tr>
   <tr>
     <td>Jrmen</td>
     <td>Children</td>
     <td>Дети</td>
+  </tr>
+      <tr>
+    <td>Jrden</td>
+    <td>Girl</td>
+    <td>+</td>
   </tr>
   <tr>
     <td>Kafiska</td>
@@ -500,11 +517,6 @@ tr:nth-child(even) {
     <td>Ie</td>
     <td>You</td>
     <td>Ты</td>
-  </tr>
-  <tr>
-    <td>Men</td>
-    <td>Guy</td>
-    <td>Чел</td>
   </tr>
   
   <tr>
