--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ tr:nth-child(even) {
     <td>+</td>
   </tr>
   <tr>
-    <td>Roma</td>
+    <td>Romma</td>
     <td>Fuck off</td>
     <td>Нахуй</td>
   </tr>
@@ -300,7 +300,7 @@ tr:nth-child(even) {
     <td>+</td>
   </tr>
   <tr>
-    <td>Vania</td>
+    <td>Vannia</td>
     <td>Dick</td>
     <td>+</td>
   </tr>
