--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ tr:nth-child(even) {
     <td>+</td>
   </tr>
   <tr>
-    <td>Romma</td>
+    <td>Kartote</td>
     <td>Fuck off</td>
     <td>Нахуй</td>
   </tr>
@@ -300,7 +300,7 @@ tr:nth-child(even) {
     <td>+</td>
   </tr>
   <tr>
-    <td>Vannia</td>
+    <td>Džinka</td>
     <td>Dick</td>
     <td>+</td>
   </tr>
@@ -413,6 +413,11 @@ tr:nth-child(even) {
     <th>ENG</th>
     <th>RUS</th>
   </tr>
+  <tr>
+    <td>Maiet</td>
+    <td>Very</td>
+    <td>+</td>
+ </tr>
   <tr>
     <td>Grot</td>
     <td>Big</td>
