--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ tr:nth-child(even) {
     <th>RUS</th>
   </tr>
   <tr>
-    <td>Sohrado</td>
+    <td>Solhrudo</td>
     <td>Hello</td>
     <td>Привет</td>
   </tr>
